--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,7 +6,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: linear-gradient(135deg, #002c7d, #9de3ff);
+            background: black;
             margin: 0;
             padding: 0;
             display: flex;
@@ -15,7 +15,7 @@
             height: 100vh;
         }
         .container {
-            background-color: #000148;
+            background-color: red;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -24,7 +24,7 @@
             width: 500px;
         }
         h1 {
-            background: linear-gradient(135deg, #ffffff,#2600ce);
+            background: black;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
@@ -37,7 +37,7 @@
             color: #c6c6c6;
         }
         input {
-            width: 100%;
+            width: 470px;
             padding: 10px;
             margin-bottom: 10px;
             border: 2px solid #ccc;
@@ -145,7 +145,7 @@
             <button type="submit">Stop Face Recognition</button>
         </form>
         <div class="dropdown">
-            <button>Track Person</button>
+            <!-- <button>Track Person</button> -->
             <form id="track-person-form">
                 <label for="track-usn">Track USN:</label>
                 <input type="text" id="track-usn" name="track-usn" required>
